Fix home image on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,13 @@ blockquote {
     width: 250px;
 }
 
+@media only screen and (max-width: 600px) {
+	.home-image {
+	    margin: 0;
+	    width: 100%;
+	}
+}
+
 /* Header */
 
 header {
